feat: Implement Dynamic Roadmap APIs